Prepare catalog upload to CDS
Former-commit-id: 358232e4cacac86f619ce297e8062ed42980f289

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -33,12 +33,14 @@
     "force_show_LS = False\n",
     "load_src_from_file = True\n",
     "save_figs = True\n",
+    "show_inset = False\n",
     "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
     "\n",
     "\n",
     "srcs_ids = [1521282 ,309137 ,214046 ,570092 ,70723 ,1747015 ,242634 ,1469861 ,1775540 ,1570009 ,1584655 ,192348 ,866068 ,160031 ,883278 ,805990 ,821390 ,221953 ,653072 ,124748 ,] # PM*\n",
     "srcs_ids = [357455] # Massive pulsating WD\n",
-    "srcs_ids = [357455 ,94932]# ALL_10-800 - WD paper"
+    "srcs_ids = [357455 ,94932]# ALL_10-800 - WD paper\n",
+    "srcs_ids = [357455 ,322799 ,94932 ,87105 ,] # ALl WDs EDR3-WD>0.9"
    ]
   },
   {
@@ -116,12 +118,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b96e25dc5114a548e9e650c2cf8eb43",
+       "model_id": "771b01fcc28842d7a6a0abee13e1988e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='rg_src_id', options=(357455, 94932), value=357455), Output()), _do…"
+       "interactive(children=(Dropdown(description='rg_src_id', options=(357455, 322799, 94932, 87105), value=357455),…"
       ]
      },
      "execution_count": 3,
@@ -156,7 +158,7 @@
     "    #plt.show()\n",
     "\n",
     "    #For paper, add inset if wanted\n",
-    "    if rg_src_id == 357455:\n",
+    "    if show_inset and rg_src_id == 357455:\n",
     "        left, bottom, width, height = [0.65, 0.4, 0.2, 0.2]\n",
     "        ax2 = fig.add_axes([left, bottom, width, height])\n",
     "        _ = vvis.plot_light_curve(tc_src, ax = ax2, add_axes=False)\n",
@@ -223,7 +225,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec95991e36c74039800e1e638c11d3a0",
+       "model_id": "504e6e657f884ad1b3c4d9f86fb43eb6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -261,21 +263,18 @@
    "execution_count": 5,
    "id": "c038cd88-42e8-4897-a277-bbf207f4c930",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c758ab9756949759c124bdcd949d3c7",
+       "model_id": "db2bb3c1b6f44a6580387febb51b290a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(357455, 94932), value=357455), IntSli…"
+       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(357455, 322799, 94932, 87105), value=…"
       ]
      },
      "metadata": {},
@@ -439,8 +438,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3f111706-fb48-4292-ace3-de526b54686e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.001388888888888889"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5/(60*60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5156a7d8-7c24-404d-9e9d-72d5dcce8ae5",
    "metadata": {},
    "outputs": [],
    "source": []
