--- a/vasca/examples/select_sources.ipynb
+++ b/vasca/examples/select_sources.ipynb
@@ -90,7 +90,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=4202</i>\n",
-       "<table id=\"table139715014694208\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table125372468281600\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>fd_src_id</th><th>nr_det</th><th>ra</th><th>dec</th><th>pos_err</th><th>pos_xv</th><th>pos_var</th><th>pos_cpval</th><th>pos_rchiq</th><th>coadd_src_id</th><th>coadd_dist</th><th>obs_filter_id</th><th>sel</th><th>flux</th><th>flux_err</th><th>flux_nxv</th><th>flux_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>coadd_ffactor</th><th>coadd_fdiff_s2n</th><th>rg_fd_id</th><th>rg_src_id</th><th>nr_fd_srcs</th><th>hr</th><th>hr_err</th><th>gaiaedr3_wd_match_id</th><th>simbad_match_id</th><th>gaiadr3_match_id</th><th>gfcat_src_id</th><th>gfcat_dist</th><th>flux_ne</th><th>src_name</th><th>otype</th><th>ogrp_simbad</th><th>match_distance_simbad</th><th>sp_type</th><th>main_id</th><th>PQSO</th><th>PGal</th><th>PSS</th><th>match_distance_gaiadr3</th><th>Gmag_abs</th><th>BP-RP</th><th>ogrp_gaiadr3</th><th>Plx</th><th>e_Plx</th><th>Plx_dist</th><th>VarFlag</th><th>RPlx</th><th>Pwd</th><th>ls_peak_pval</th><th>ls_model_rchiq</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>arcsec</th><th>arcsec2</th><th>arcsec2</th><th></th><th></th><th></th><th>arcsec</th><th></th><th></th><th>1e-06 Jy</th><th>1e-06 Jy</th><th></th><th>1e-12 Jy2</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>arcsec</th><th></th><th></th><th></th><th></th><th>arcsec</th><th></th><th></th><th></th><th></th><th></th><th>arcsec</th><th></th><th></th><th></th><th>0.001 arcsec</th><th>0.001 arcsec</th><th>pc</th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>int32[2]</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int64</th><th>float32</th><th>int32[2]</th><th>bool</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>int64</th><th>int32</th><th>int32</th><th>float32</th><th>float32</th><th>int32</th><th>int32</th><th>int32</th><th>int64</th><th>float32</th><th>float32[2]</th><th>bytes24</th><th>bytes32</th><th>bytes8</th><th>float32</th><th>bytes32</th><th>bytes32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>bytes8</th><th>float32</th><th>float32</th><th>float32</th><th>bytes32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th></tr></thead>\n",
@@ -207,35 +207,39 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "srcs_ids = [357455 ,322799 ,94932 ,87105 ,]\n",
+      "srcs_ids = [357455 ,407685 ,322799 ,94932 ,99675 ,87105 ,]\n",
       "\n",
-      "Total Nr. of sources: 4 \n",
+      "Total Nr. of sources: 6 \n",
       "\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><i>Table length=4</i>\n",
-       "<table id=\"table140550389037808\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<div><i>Table length=6</i>\n",
+       "<table id=\"table125372470402912\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>src_name</th><th>ra</th><th>dec</th><th>ogrp_gaiadr3</th><th>otype</th><th>sp_type</th><th>main_id</th><th>nr_det</th><th>flux</th><th>flux_cpval</th><th>flux_ne</th><th>Plx_dist</th><th>ls_peak_pval</th><th>ls_model_rchiq</th><th>VarFlag</th><th>Pwd</th><th>RPlx</th><th>rg_src_id</th></tr></thead>\n",
        "<thead><tr><th></th><th>deg</th><th>deg</th><th></th><th></th><th></th><th></th><th></th><th>1e-06 Jy</th><th></th><th></th><th>pc</th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>bytes24</th><th>float64</th><th>float64</th><th>bytes8</th><th>bytes32</th><th>bytes32</th><th>bytes32</th><th>int32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32</th><th>float32</th><th>float32</th><th>bytes32</th><th>float32</th><th>float32</th><th>int32</th></tr></thead>\n",
        "<tr><td>1UVA J04917.1-252556.5</td><td>12.321346896575122</td><td>-25.432354111852234</td><td>WD*</td><td>WD*</td><td>DA</td><td>GALEX J004917.1-252556</td><td>11 .. 1</td><td>73.65471 .. 41.309494</td><td>1.0632669e-08 .. -1.0</td><td>0.04259176 .. --</td><td>99.60556</td><td>-1.0</td><td>-1.0</td><td>NOT_AVAILABLE</td><td>1.0</td><td>39.4121</td><td>357455</td></tr>\n",
+       "<tr><td>1UVA J234829.1-92500.3</td><td>357.12120255365323</td><td>-9.416754993209635</td><td>WD*</td><td>WD*</td><td>DA</td><td>GALEX J234829.1-092500</td><td>14 .. -1</td><td>16.348427 .. -1.0</td><td>1.6703632e-17 .. -1.0</td><td>0.13284326 .. --</td><td>403.82828</td><td>-1.0</td><td>-1.0</td><td>NOT_AVAILABLE</td><td>0.339561</td><td>4.7312</td><td>407685</td></tr>\n",
        "<tr><td>1UVA J22222.9-05025.9</td><td>35.59527907918115</td><td>-0.8405203013145769</td><td>WD*</td><td>WD*</td><td>DA</td><td>GALEX J022222.7-005027</td><td>1 .. 9</td><td>26.544712 .. 10.316418</td><td>-1.0 .. 2.1149104e-07</td><td>-- .. 0.18395825</td><td>371.59525</td><td>-1.0</td><td>-1.0</td><td>NOT_AVAILABLE</td><td>0.988086</td><td>7.7587</td><td>322799</td></tr>\n",
        "<tr><td>1UVA J221828.6-00012.0</td><td>334.6190008630954</td><td>-0.00334150877900888</td><td>WD*</td><td>WD*</td><td>DAH</td><td>PB  5130</td><td>7 .. 2</td><td>121.26045 .. 42.269413</td><td>2.6516346e-07 .. 0.00661471</td><td>0.04008117 .. 0.07513158</td><td>121.74485</td><td>-1.0</td><td>-1.0</td><td>NOT_AVAILABLE</td><td>0.994004</td><td>48.3832</td><td>94932</td></tr>\n",
+       "<tr><td>1UVA J221409.9+05246.0</td><td>333.5413643717582</td><td>0.8794312141279353</td><td>AGN</td><td>WD*</td><td>DC</td><td>GALEX J221409.8+005245</td><td>34 .. 5</td><td>19.755314 .. 4.9333982</td><td>0.0 .. 0.67645735</td><td>0.25309312 .. --</td><td>nan</td><td>1.6815713e-09</td><td>4.9599805</td><td>VARIABLE</td><td>-1.0</td><td>-1.142</td><td>99675</td></tr>\n",
        "<tr><td>1UVA J231536.9+192449.5</td><td>348.90356888412066</td><td>19.41375937325458</td><td>WD*</td><td>WD?</td><td></td><td>SDSS J231536.88+192448.9</td><td>15 .. 4</td><td>126.54993 .. 38.594788</td><td>7.254814e-15 .. 0.4565092</td><td>0.0423359 .. 0.055154238</td><td>168.92747</td><td>-1.0</td><td>-1.0</td><td>NOT_AVAILABLE</td><td>0.995758</td><td>39.2334</td><td>87105</td></tr>\n",
        "</table></div>"
       ],
       "text/plain": [
-       "<Table length=4>\n",
+       "<Table length=6>\n",
        "        src_name                ra         ...   RPlx  rg_src_id\n",
        "                               deg         ...                  \n",
        "        bytes24              float64       ... float32   int32  \n",
        "----------------------- ------------------ ... ------- ---------\n",
        " 1UVA J04917.1-252556.5 12.321346896575122 ... 39.4121    357455\n",
+       " 1UVA J234829.1-92500.3 357.12120255365323 ...  4.7312    407685\n",
        "  1UVA J22222.9-05025.9  35.59527907918115 ...  7.7587    322799\n",
        " 1UVA J221828.6-00012.0  334.6190008630954 ... 48.3832     94932\n",
+       " 1UVA J221409.9+05246.0  333.5413643717582 ...  -1.142     99675\n",
        "1UVA J231536.9+192449.5 348.90356888412066 ... 39.2334     87105"
       ]
      },
@@ -246,7 +250,7 @@
    "source": [
     "# Make selection\n",
     "sel_otype = rc.tt_sources[\"otype\"] ==  \"PM*\" #\"SN*\" #\"RR*\"# \"No*\"#\"HS?\" #\"BS*\" # # \"SN*\" #\"EB*\"\n",
-    "sel_otypes =   (rc.tt_sources[\"Pwd\"] >0.9) # (rc.tt_sources[\"otype\"] ==  \"WD?\")  + #  + (rc.tt_sources[\"RPlx\"]>4) (rc.tt_sources[\"otype\"] ==\"WD*\")*(rc.tt_sources[\"sp_type\"] !=\"none\")+\n",
+    "sel_otypes =   (rc.tt_sources[\"Pwd\"] >0.9) + (rc.tt_sources[\"otype\"] ==\"WD*\") # (rc.tt_sources[\"otype\"] ==  \"WD?\")  + #  + (rc.tt_sources[\"RPlx\"]>4) (rc.tt_sources[\"otype\"] ==\"WD*\")*(rc.tt_sources[\"sp_type\"] !=\"none\")+\n",
     "sel_flux_nxv = rc.tt_sources[\"flux_nxv\"][:,0]>2\n",
     "sel_flux_hr = rc.tt_sources[\"hr\"]>2\n",
     "sel_src_id = rc.tt_sources[\"rg_src_id\"]==15179\n",
