--- a/vasca/examples/inspect_GALEX.ipynb
+++ b/vasca/examples/inspect_GALEX.ipynb
@@ -39,7 +39,8 @@
     "from astropy.coordinates import SkyCoord\n",
     "import healpy as hpy\n",
     "import numpy as np\n",
-    "from vasca.resource_manager import ResourceManager"
+    "from vasca.resource_manager import ResourceManager\n",
+    "import numpy.ma as ma"
    ]
   },
   {
@@ -60,7 +61,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=2</i>\n",
-       "<table id=\"table140252347589696\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table135360598804704\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>intentType</th><th>obs_collection</th><th>provenance_name</th><th>instrument_name</th><th>project</th><th>filters</th><th>wavelength_region</th><th>target_name</th><th>target_classification</th><th>obs_id</th><th>s_ra</th><th>s_dec</th><th>dataproduct_type</th><th>proposal_pi</th><th>calib_level</th><th>t_min</th><th>t_max</th><th>t_exptime</th><th>em_min</th><th>em_max</th><th>obs_title</th><th>t_obs_release</th><th>proposal_id</th><th>proposal_type</th><th>sequence_number</th><th>s_region</th><th>jpegURL</th><th>dataURL</th><th>dataRights</th><th>mtFlag</th><th>srcDen</th><th>obsid</th><th>objID</th></tr></thead>\n",
        "<thead><tr><th>bytes7</th><th>bytes5</th><th>bytes3</th><th>bytes5</th><th>bytes3</th><th>bytes3</th><th>bytes2</th><th>bytes16</th><th>bytes1</th><th>bytes19</th><th>float64</th><th>float64</th><th>bytes5</th><th>bytes1</th><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>bytes1</th><th>float64</th><th>bytes1</th><th>bytes3</th><th>int64</th><th>bytes43</th><th>bytes130</th><th>bytes124</th><th>bytes6</th><th>bool</th><th>float64</th><th>bytes4</th><th>bytes4</th></tr></thead>\n",
        "<tr><td>science</td><td>GALEX</td><td>DIS</td><td>GALEX</td><td>DIS</td><td>NUV</td><td>UV</td><td>PS_XMMLSS_MOS00</td><td>--</td><td>2592597978464124928</td><td>35.578863351058885</td><td>-3.14176421214975</td><td>image</td><td>--</td><td>2</td><td>54791.262777777774</td><td>55512.31023148148</td><td>40457.25</td><td>169300000000.0</td><td>300700000000.0</td><td>--</td><td>55953.94460633</td><td>--</td><td>DIS</td><td>--</td><td>CIRCLE ICRS  35.57886335  -3.14176421 0.625</td><td>http://galex.stsci.edu/data/GR6/pipe/01-vsn/08150-PS_XMMLSS_MOS00/d/01-main/0007-img/07-try/qa/PS_XMMLSS_MOS00-xd-int_2color.jpg</td><td>http://galex.stsci.edu/data/GR6/pipe/01-vsn/08150-PS_XMMLSS_MOS00/d/01-main/0007-img/07-try/PS_XMMLSS_MOS00-nd-exp.fits.gz</td><td>PUBLIC</td><td>True</td><td>5885.0</td><td>2047</td><td>3659</td></tr>\n",
@@ -147,7 +148,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=25983</i>\n",
-       "<table id=\"table140250663573520\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table135358938834176\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>ParentImgRunID</th><th>RATileCenter</th><th>DECTileCenter</th><th>nexptime_mean</th><th>fexptime_mean</th><th>gall</th><th>galb</th><th>nuv_phot_rate</th><th>nPhotoObjects</th><th>nexptime_sum</th><th>fexptime_sum</th><th>nPhotoVisits</th><th>survey</th><th>minPhotoObsDate</th><th>maxPhotoObsDate</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>bytes3</th><th>bytes22</th><th>bytes22</th></tr></thead>\n",
        "<tr><td>2411539199493668864</td><td>147.0661637032415</td><td>-0.504841940754146</td><td>1163.5</td><td>1163.5</td><td>237.37221641899384</td><td>38.061087862771245</td><td>5.7927270755747</td><td>6688.0</td><td>2327.0</td><td>2327.0</td><td>2</td><td>MIS</td><td>2/25/2007 5:39:18 AM</td><td>2/25/2007 5:56:33 AM</td></tr>\n",
@@ -258,7 +259,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=2</i>\n",
-       "<table id=\"table140252329340032\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table135360598650368\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>ParentImgRunID</th><th>RATileCenter</th><th>DECTileCenter</th><th>nexptime_mean</th><th>fexptime_mean</th><th>gall</th><th>galb</th><th>nuv_phot_rate</th><th>nPhotoObjects</th><th>nexptime_sum</th><th>fexptime_sum</th><th>nPhotoVisits</th><th>survey</th><th>minPhotoObsDate</th><th>maxPhotoObsDate</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>bytes3</th><th>bytes22</th><th>bytes22</th></tr></thead>\n",
        "<tr><td>2482083865531777024</td><td>11.8910606122809</td><td>-25.283705129307165</td><td>1367.5181818181818</td><td>298.2863636363636</td><td>97.4942074076784</td><td>-87.96105753853617</td><td>8.416246655156435</td><td>9785.09090909091</td><td>15042.699999999999</td><td>3281.1499999999996</td><td>11</td><td>NGS</td><td>10/13/2003 7:40:26 AM</td><td>10/13/2003 8:07:46 AM</td></tr>\n",
@@ -295,7 +296,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_14016/2760055361.py:30: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "/tmp/ipykernel_24416/2760055361.py:30: RuntimeWarning: invalid value encountered in scalar divide\n",
       "  print(sur,\": Visits =\",nvis,\",exposure =\",int(exp_sum),\"s ,exposure per visit =\",exp_sum/nvis,\"s\")\n"
      ]
     }
@@ -360,7 +361,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=44795</i>\n",
-       "<table id=\"table140250663582208\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table135358938835376\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>ParentImgRunID</th><th>RATileCenter</th><th>DECTileCenter</th><th>nexptime_mean</th><th>fexptime_mean</th><th>gall</th><th>galb</th><th>nuv_phot_rate</th><th>nPhotoObjects</th><th>nexptime_sum</th><th>fexptime_sum</th><th>nPhotoVisits</th><th>survey</th><th>minPhotoObsDate</th><th>maxPhotoObsDate</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>bytes3</th><th>bytes22</th><th>bytes22</th></tr></thead>\n",
        "<tr><td>2391589660720627712</td><td>210.542232477159</td><td>-32.6804067553693</td><td>544.0</td><td>544.0</td><td>319.74270865062874</td><td>27.871918173555255</td><td>14.303308823529411</td><td>7781.0</td><td>544.0</td><td>544.0</td><td>1</td><td>NGS</td><td>6/7/2003 5:02:29 AM</td><td>6/7/2003 5:11:33 AM</td></tr>\n",
@@ -407,7 +408,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=10244</i>\n",
-       "<table id=\"table140252329338832\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table135358938835472\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>RATileCenter</th><th>DECTileCenter</th><th>survey</th><th>nexptime</th><th>fexptime</th><th>imgRunID</th><th>ParentImgRunID</th><th>joinID</th><th>tileNum</th><th>specTileNum</th><th>source</th><th>nPhotoObjects</th><th>nPhotoVisits</th><th>PhotoObsDate</th><th>spectra</th><th>nSpectra</th><th>nSpectraVisits</th><th>SpecObsDate</th><th>visitNum</th><th>subvis</th><th>minPhotoObsDate</th><th>maxPhotoObsDate</th><th>minSpecObsDate</th><th>maxSpecObsDate</th><th>PhotoObsDate_MJD</th><th>gall</th><th>galb</th><th>vis_id</th><th>exp_ratio</th><th>minPhotoObsDate_MJD</th><th>maxPhotoObsDate_MJD</th><th>delta_time_phot</th><th>nuv_tphot_frac</th><th>nuv_phot_rate</th></tr></thead>\n",
        "<thead><tr><th>float64</th><th>float64</th><th>bytes3</th><th>float64</th><th>float64</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>bytes6</th><th>int64</th><th>int64</th><th>bytes22</th><th>bytes5</th><th>bytes4</th><th>bytes4</th><th>bytes4</th><th>int64</th><th>int64</th><th>bytes22</th><th>bytes22</th><th>bytes4</th><th>bytes4</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
        "<tr><td>11.8937785394012</td><td>-25.2887963267737</td><td>NGS</td><td>1640.05</td><td>1640.05</td><td>2482083728193486848</td><td>2482083865531777024</td><td>9429</td><td>5009</td><td>-999</td><td>visitI</td><td>11947</td><td>1</td><td>10/13/2003 7:40:26 AM</td><td>False</td><td>null</td><td>null</td><td>null</td><td>4</td><td>-999</td><td>10/13/2003 7:40:26 AM</td><td>10/13/2003 8:07:46 AM</td><td>null</td><td>null</td><td>52925.31974537037</td><td>97.49585998833946</td><td>-87.96673545716985</td><td>2482083728193486848</td><td>1.0</td><td>52925.31974537037</td><td>52925.33872685185</td><td>1639.9999998975545</td><td>0.999969513062135</td><td>7.284534008109509</td></tr>\n",
@@ -524,7 +525,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d3c4c63ac0e484789779db04890c8b1",
+       "model_id": "16cf7fa0bf05410b9096249cbbcc8624",
        "version_major": 2,
        "version_minor": 0
       },
@@ -587,13 +588,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "High resolution pixel diameter: 0.0143 deg Npix: 201326592 Nside: 4096\n"
+      "High resolution pixel diameter: 0.0143 deg Npix: 201326592 Nside: 4096\n",
+      "[0 0 0 ... 0 0 0] [ True  True  True ...  True  True  True]\n",
+      "1306528\n"
      ]
     },
     {
      "data": {
+      "text/plain": [
+       "masked_array(data=[0, 0, 0, ..., 0, 0, 0],\n",
+       "             mask=[False, False, False, ..., False, False, False],\n",
+       "       fill_value=0,\n",
+       "            dtype=int32)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "43d9965a84624a3aae6efd42e3f9c3a4",
+       "model_id": "30c22fdfad9249539536c7f29c437ee5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -618,7 +634,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c78e8f0053747f0956432af329c2edc",
+       "model_id": "f90599b5694841f6bc8f846fc99a2f74",
        "version_major": 2,
        "version_minor": 0
       },
@@ -657,7 +673,7 @@
     "    print(\"High resolution pixel diameter:\",np.round(pix_diam_hres,4),\"Npix:\",npix_hres,\"Nside:\",nside_hres)\n",
     "    tt_fd[\"hvec\"] = hpy.ang2vec(tt_fd[\"gall\"],tt_fd[\"galb\"],lonlat=True)\n",
     "\n",
-    "    nr_vis_hres = np.zeros(npix_hres)  # empty map\n",
+    "    nr_vis_hres = np.zeros(npix_hres,dtype=np.int32)  # empty map\n",
     "    nr_fd_hres = np.zeros(npix_hres)  # empty map\n",
     "\n",
     "    # fill map with coverage data\n",
@@ -687,7 +703,15 @@
     "    plt.savefig(fout_name_add+\"_nr_vis.pdf\")\n",
     "\n",
     "#write healpix map to Aladin format, modify names\n",
-    "# hpy.fitsfunc.write_map(filename,[hp_vis, hp_exp],coord=\"C\",column_names=[\"nr_vis\", \"exposure\"],dtype=[np.float32, np.float32],overwrite=True,partial=True)"
+    "\n",
+    "mask = nr_vis_hres<1\n",
+    "print(nr_vis_hres, mask)\n",
+    "\n",
+    "m_nr_vis = hpy.ma(nr_vis_hres, badval=0)\n",
+    "m_nr_vis.mask = np.logical_not(mask)\n",
+    "hpy.fitsfunc.write_map(\"1UVA_map_healpix_gal_nrvis.fits\",m_nr_vis, partial=True,coord=\"G\",column_names=[\"nr_vis\"],dtype=np.int32,overwrite=True,nest=False)\n",
+    "print(m_nr_vis.mask.sum())\n",
+    "m_nr_vis"
    ]
   },
   {
@@ -722,8 +746,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "a5a278f2-d491-4bb4-9f03-177626ef6eb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "masked_array(data=[0, 0, 0, ..., 0, 0, 0],\n",
+       "             mask=[False, False, False, ..., False, False, False],\n",
+       "       fill_value=0,\n",
+       "            dtype=int32)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m_nr_vis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8116b85a-5f7c-4954-8831-089e2dba9203",
    "metadata": {},
    "outputs": [],
    "source": []
